@@ -43,7 +43,6 @@ import org.prebid.server.util.HttpUtil;
 import org.prebid.server.util.ObjectUtil;
 import org.prebid.server.util.StreamUtil;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Currency;
 import java.util.HashSet;
@@ -62,8 +61,8 @@ public class Ortb2ImplicitParametersResolver {
     private static final String PREBID_EXT = "prebid";
     private static final String BIDDER_EXT = "bidder";
 
-    private static final Set<String> IMP_EXT_NON_BIDDER_FIELDS = Collections.unmodifiableSet(new HashSet<>(
-            Arrays.asList(PREBID_EXT, "context", "all", "general", "skadn", "data")));
+    private static final Set<String> IMP_EXT_NON_BIDDER_FIELDS =
+            Set.of(PREBID_EXT, "context", "all", "general", "skadn", "data", "gpid");
 
     private final boolean shouldCacheOnlyWinningBids;
     private final String adServerCurrency;
@@ -470,10 +469,11 @@ public class Ortb2ImplicitParametersResolver {
 
     private boolean shouldMoveBidderParams(Imp imp) {
         return imp.getExt() != null
-                && StreamUtil.asStream(imp.getExt().fieldNames()).anyMatch(this::isImpExtBidderField);
+                && StreamUtil.asStream(imp.getExt().fieldNames())
+                .anyMatch(Ortb2ImplicitParametersResolver::isImpExtBidderField);
     }
 
-    private boolean isImpExtBidderField(String field) {
+    public static boolean isImpExtBidderField(String field) {
         return !IMP_EXT_NON_BIDDER_FIELDS.contains(field);
     }
 
@@ -510,10 +510,12 @@ public class Ortb2ImplicitParametersResolver {
 
     private ObjectNode prepareValidImpExtCopy(ObjectNode impExt) {
         final ObjectNode copiedImpExt = impExt != null ? impExt.deepCopy() : mapper.mapper().createObjectNode();
+
         final ObjectNode modifiedExtPrebid = getOrCreateChildObjectNode(copiedImpExt, PREBID_EXT);
         copiedImpExt.replace(PREBID_EXT, modifiedExtPrebid);
         final ObjectNode modifiedExtPrebidBidder = getOrCreateChildObjectNode(modifiedExtPrebid, BIDDER_EXT);
         modifiedExtPrebid.replace(BIDDER_EXT, modifiedExtPrebidBidder);
+
         return copiedImpExt;
     }
 
@@ -521,7 +523,7 @@ public class Ortb2ImplicitParametersResolver {
         final ObjectNode modifiedExtPrebidBidder = (ObjectNode) impExt.get(PREBID_EXT).get(BIDDER_EXT);
 
         final Set<String> bidderFields = StreamUtil.asStream(impExt.fieldNames())
-                .filter(this::isImpExtBidderField)
+                .filter(Ortb2ImplicitParametersResolver::isImpExtBidderField)
                 .collect(Collectors.toSet());
 
         for (final String currentBidderField : bidderFields) {
@@ -766,17 +768,18 @@ public class Ortb2ImplicitParametersResolver {
      * Returns populated {@link ExtRequestPrebidChannel} or null if no changes were applied.
      */
     private ExtRequestPrebidChannel channelOrNull(ExtRequestPrebid prebid, BidRequest bidRequest) {
-        final String existingChannelName = ObjectUtil.getIfNotNull(ObjectUtil.getIfNotNull(prebid,
-                        ExtRequestPrebid::getChannel),
-                ExtRequestPrebidChannel::getName);
+        final ExtRequestPrebidChannel channel = ObjectUtil.getIfNotNull(prebid, ExtRequestPrebid::getChannel);
+        final String channelName = ObjectUtil.getIfNotNull(channel, ExtRequestPrebidChannel::getName);
 
-        if (StringUtils.isNotBlank(existingChannelName)) {
+        if (StringUtils.isNotBlank(channelName)) {
             return null;
         }
 
         if (bidRequest.getApp() != null) {
             return ExtRequestPrebidChannel.of(APP_CHANNEL);
-        } else if (bidRequest.getSite() != null) {
+        }
+
+        if (bidRequest.getSite() != null) {
             return ExtRequestPrebidChannel.of(WEB_CHANNEL);
         }
 
